--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,37 +1,109 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="description" content="HW_WEB_11_FastAPI" />
-    <title>HW_WEB_11</title>
-<!--     CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-<!--    {% load static %}-->
-<!--    <link rel="stylesheet" href="{% static 'app_quote/style.css' %}">-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
+  <script src="script.js"></script>
 </head>
+
 <body>
-<div class="container">
-    <h1><a href="/api" role="button">Contact Application</a></h1>
-    <nav style="margin-bottom: 20px; border-bottom: 2px solid; padding-left: 30px">
-        <ul>
-            <li><a href="/api/contacts" role="button"> All contacts </a></li>
-            <li><a href="/" role="button"> Go back to the main page </a></li>
+  <div class="container py-5" x-data="{
+    contacts: [],
+    newContact: { firstname: '', lastname: '', e_mail: '', birthday: '', add_data: '' },
+    error: null,
+    async get_contacts() {
+      try {
+        this.contacts = await window.get_contacts();
+      } catch (err) {
+        this.error = err.message;
+      }
+    },
+    async create_contact() {
+      try {
+        await window.create_contact(this.newContact);
+        this.newContact = { firstname: '', lastname: '', e_mail: '', birthday: '', add_data: '' };
+        await this.get_contact();
+      } catch (err) {
+        this.error = err.message;
+      }
+    },
+    async update_contact(contact) {
+      try {
+        await window.update_contact(contact);
+        contact.editing = false;
+        await this.get_contact();
+      } catch (err) {
+        this.error = err.message;
+      }
+    },
+    async delete_contact(id) {
+      try {
+        await window.delete_contact(id);
+        this.contact = this.contact.filter(contact => contact.id !== id);
+      } catch (err) {
+        this.error = err.message;
+      }
+    },
+    init() { this.get_contacts(); }
+  }" x-init="init()">
+    <div class="row">
+      <div class="col-md-6 offset-md-3">
+        <h1 class="mb-4 text-center">Contacts API</h1>
+
+        <!-- Отображение сообщения об ошибке -->
+        <div x-show="error" class="alert alert-danger" x-text="error"></div>
+
+        <div class="row mb-3">
+          <div class="input-group mb-3">
+            <input type="text" x-model="newContact.firstname" class="form-control" placeholder="Contact firstname">
+          </div>
+          <div class="input-group mb-3">
+            <input type="text" x-model="newContact.lastname" class="form-control" placeholder="Contact lastname">
+          </div>
+          <div class="input-group mb-3">
+            <input type="text" x-model="newContact.e_mail" class="form-control" placeholder="Contact e_mail">
+          </div>
+          <div class="input-group mb-3">
+            <input type="text" x-model="newContact.birthday" class="form-control" placeholder="Contact birthday">
+          </div>
+          <div class="input-group mb-3">
+            <input type="text" x-model="newContact.add_data" class="form-control" placeholder="Contact add_data">
+          </div>
+
+          <button @click="create_contact" class="btn btn-primary">Add</button>
+
+        </div>
+
+        <ul class="list-group">
+          <template x-for="contact in contacts" :key="contact.id">
+            <li class="list-group-item">
+              <div x-show="!contact.editing">
+                <div><strong>Firstname:</strong> <span @dblclick="contact.editing = true" x-text="contact.firstname"></span></div>
+                <div><strong>Lastname:</strong> <span @dblclick="contact.editing = true" x-text="contact.lastname"></span></div>
+                <div><strong>Email:</strong> <span @dblclick="contact.editing = true" x-text="contact.e_mail"></span></div>
+                <div><strong>Birthday:</strong> <span @dblclick="contact.editing = true" x-text="contact.birthday"></span></div>
+                <div><strong>Add data:</strong> <span @dblclick="contact.editing = true" x-text="contact.add_data"></span></div>
+
+                <button @click="delete_contact(contact.id)" class="btn btn-sm btn-danger">Delete</button>
+                <button @click="contact.editing = true" class="btn btn-sm btn-warning">Edit</button>
+              </div>
+              <div x-show="contact.editing">
+                <input type="text" class="form-control" x-model="contact.firstname">
+                <input type="text" class="form-control" x-model="contact.lastname">
+                <input type="text" class="form-control" x-model="contact.e_mail">
+                <input type="text" class="form-control" x-model="contact.birthday">
+                <input type="text" class="form-control" x-model="contact.add_data">
+                <div x-text="contact.firstname"></div>
+                <button @click="update_contact(contact)" class="btn btn-sm btn-success">Save</button>
+                <button @click="contact.editing = false" class="btn btn-sm btn-secondary">Cancel</button>
+              </div>
+            </li>
+          </template>
         </ul>
-    </nav>
-<!--    {% block content %}-->
-<!--      {% if latest_quote_list %}-->
-<!--      <ul>-->
-<!--          {% for quote in latest_quote_list %}-->
-<!--          <li>-->
-<!--              <a href="{% url 'app_quote:detail' quote.id %}">{{ quote.quote }}</a>-->
-<!--          </li>-->
-<!--          {% endfor %}-->
-<!--      </ul>-->
-<!--      {% else %}-->
-<!--      <p>No polls are available.</p>-->
-<!--      {% endif %}-->
-<!--    {% endblock %}-->
-</div>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
